<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/scan_share"
        android:contentDescription="@string/scan_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_baseline_content_copy_24"
        android:title="@string/scan_copy"
        android:contentDescription="@string/scan_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/scan_delete"
        android:contentDescription="@string/scan_delete"
        app:showAsAction="ifRoom" />

</menu>