<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="271dp"
        android:layout_marginBottom="190dp"
        android:layout_height="121dp"
        android:text="@string/app_desc"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login_google"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/login_google"
        app:icon="@drawable/ic_baseline_verified_user_24" />

    <Button
        android:id="@+id/login_email"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:text="@string/login_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_email_24" />
</LinearLayout>