<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="?isLightTheme">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/aboutAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/about"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/materialCardViewElevatedStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Media -->
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="164dp"
                        app:srcCompat="@drawable/ic_launcher_foreground"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/app_name"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/app_name"
                            android:textAppearance="?attr/textAppearanceTitleLarge"
                            />
                        <TextView
                            android:id="@+id/version_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text=""
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBodyMedium"
                            android:textColor="?android:attr/textColorSecondary"
                            />
                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:chipIcon="@drawable/ic_google_play_brands"
                                android:text="@string/gplay"/>

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:chipIcon="@drawable/ic_github_brands"
                                android:text="@string/github"/>

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:chipIcon="@drawable/ic_instagram_brands"
                                android:text="@string/insta"/>

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:chipIcon="@drawable/ic_earth_americas_solid"
                                android:text="@string/website"/>

                        </com.google.android.material.chip.ChipGroup>

                    </LinearLayout>

                    <Button
                        android:id="@+id/elevatedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/discord"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        app:icon="@drawable/ic_verified_fill1_wght400_grad0_opsz24"
                        style="@style/Widget.Material3.Button.Icon"
                        />

                    <Button
                        android:id="@+id/elevatedButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/translate"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="5dp"
                        app:icon="@drawable/ic_earth_americas_solid"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        />


                    <Button
                        android:id="@+id/donate_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/donate"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="30dp"
                        app:icon="@drawable/ic_paypal_brands"
                        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                        />

                </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>