<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_register"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/name_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_register_txt"
            android:singleLine="true"
            android:nextFocusDown="@+id/email_register_txt"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_register_txt"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:nextFocusDown="@+id/password_register_txt"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_register_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:nextFocusDown="@+id/password_register_txt_repeat"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_register_repeat"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/repeat_password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_register_txt_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_action_btn"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/register_btn"
        app:icon="@drawable/ic_outline_free_breakfast_24" />


</LinearLayout>